Closed Bug 202505 Opened 23 years ago Closed 22 years ago

install reports there is zero space free on my drive and quits

Categories

(SeaMonkey :: Installer, defect)

x86
Windows NT
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED
mozilla1.6final

People

(Reporter: Ibmmacman, Assigned: Biesinger)

References

Details

Attachments

(1 file)

User-Agent: Mozilla/5.0 (Windows; U; WinNT3.51; en-US; rv:1.3b) Gecko/20030210 Build Identifier: Mozilla/5.0 (Windows; U; WinNT3.51; en-US; rv:1.3b) Gecko/20030210 Mozilla Works really good on my win NT 3.51 Box Just can't install on it. the install tells me there is no free space on the drive and there is at least on GB of space free. I have to copy the mozilla folder from my 2k box and then copy a dll file. Reproducible: Always Steps to Reproduce: 1.Try to install Mozilla on NT 3.51 2. 3.
Mitchell, can you test this with a current release? Does Mozilla work for you on other OSes? Have you tried just using one of the zipped builds rather than the installer? ->Installer. Perhaps we have a file space checking problem on NT 3.x? Maybe a Necko problem?
Assignee: asa → general
Component: Browser-General → Installer
QA Contact: asa → bugzilla
indeed. the problem is as follows: GetDiskSpaceAvailable only tries to call NS_GetDiskFreeSpace if the OS is windows 95 w/o GetDiskFreeSpaceEx. In all other cases, it calls NS_GetDiskFreeSpaceEx - if available. Windows NT 3.51 is clearly not Windows 95. However, it does not contain GetDiskFreeSpaceEx either, compare: http://msdn.microsoft.com/library/default.asp?url=/library/en-us/winprog/winprog/windows_nt_4_0.asp it became available only in NT 4.0. So I guess it would be better if this code: if((gSystemInfo.dwOSType & OS_WIN95_DEBUTE) && (NS_GetDiskFreeSpace != NULL)) { ParsePath(szPath, szTempPath, MAX_BUF, FALSE, PP_ROOT_ONLY); NS_GetDiskFreeSpace(szTempPath, &dwSectorsPerCluster, &dwBytesPerSector, &dwNumberOfFreeClusters, &dwTotalNumberOfClusters); ullReturn = ((ULONGLONG)dwBytesPerSector * (ULONGLONG)dwSectorsPerCluster * (ULONGLONG)dwNumberOfFreeClusters); } else if(NS_GetDiskFreeSpaceEx != NULL) { ... } looked more like this: if(NS_GetDiskFreeSpaceEx != NULL) { ... } else if (NS_GetDiskFreeSpace != NULL) { }
confirming and taking
Assignee: general → cbiesinger
Status: UNCONFIRMED → NEW
Ever confirmed: true
Target Milestone: --- → mozilla1.6final
Status: NEW → ASSIGNED
Attachment #137612 - Flags: review?(dveditz+bmo)
Although the installer allows user to install in a specific location it always trys to install to the C: drive. My C: drive is full. I do not install anything there. There is plenty of room on the E: drive which I specified as the destination. Yet It won't install because of lack of room on the C: drive. This is true for all Mozilla versions and for Plug-Ins.
that is an entirely different issue. please talk about that in another bug (a new one if one is not alraedy filed).
the issue in comment 5 is bug 53622
Comment on attachment 137612 [details] [diff] [review] patch r=dveditz
Attachment #137612 - Flags: review?(dveditz+bmo) → review+
Attachment #137612 - Flags: superreview?(roc)
Attachment #137612 - Flags: superreview?(roc) → superreview+
thanks, checked in Checking in extra.c; /cvsroot/mozilla/xpinstall/wizard/windows/setup/extra.c,v <-- extra.c new revision: 1.133; previous revision: 1.132 done
Status: ASSIGNED → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Product: Browser → Seamonkey
*** Bug 236400 has been marked as a duplicate of this bug. ***
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: