install reports there is zero space free on my drive and quits (NT 3.51) bug 202505 r=dveditz sr=roc